Update footer: Change to METU STAT-495 Statistical Analysis

--- a/flood_dashboard/index.html
+++ b/flood_dashboard/index.html
@@ -715,7 +715,7 @@
         <!-- Footer -->
         <footer class="footer">
             <p>Flood Disaster Risk Analysis Dashboard | Data: EM-DAT & Dartmouth Flood Observatory | Analysis Period: 2000-2025</p>
-            <p>STAT-495 Statistical Analysis Project | January 2026</p>
+            <p>METU STAT-495 Statistical Analysis | January 2026</p>
         </footer>
     </div>
 
